[package]
name = "lakecli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
deltalake = { version = "0.20.0", features = ["deltalake-aws", "s3", "datafusion"] }
object_store = { version = "0.10.2", features = ["aws"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["macros"] }
url = "2.5.2"
